@@ -17,13 +17,9 @@
 
 package ua.org.java.dynamoit.utils;
 
-import com.amazonaws.services.dynamodbv2.document.Item;
-import com.amazonaws.services.dynamodbv2.document.ItemUtils;
-import com.amazonaws.services.dynamodbv2.model.AttributeValue;
-import com.amazonaws.services.dynamodbv2.model.DescribeTableResult;
-import com.amazonaws.services.dynamodbv2.model.KeySchemaElement;
-import com.amazonaws.services.dynamodbv2.model.TableDescription;
+import com.fasterxml.jackson.annotation.JsonAutoDetect;
 import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.PropertyAccessor;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -31,8 +27,31 @@ import com.fasterxml.jackson.databind.ObjectWriter;
 import javafx.scene.input.Clipboard;
 import javafx.scene.input.ClipboardContent;
 import javafx.scene.input.KeyEvent;
-import ua.org.java.dynamoit.db.KeySchemaType;
+import software.amazon.awssdk.core.SdkBytes;
+import software.amazon.awssdk.core.SdkField;
+import software.amazon.awssdk.core.protocol.MarshallingType;
+import software.amazon.awssdk.enhanced.dynamodb.Key;
+import software.amazon.awssdk.enhanced.dynamodb.document.EnhancedDocument;
+import software.amazon.awssdk.enhanced.dynamodb.model.QueryConditional;
+import software.amazon.awssdk.enhanced.dynamodb.model.QueryEnhancedRequest;
+import software.amazon.awssdk.protocols.core.OperationInfo;
+import software.amazon.awssdk.protocols.json.AwsJsonProtocolMetadata;
+import software.amazon.awssdk.protocols.json.SdkJsonGenerator;
+import software.amazon.awssdk.protocols.json.internal.marshall.JsonMarshallerContext;
+import software.amazon.awssdk.protocols.json.internal.marshall.JsonProtocolMarshaller;
+import software.amazon.awssdk.protocols.json.internal.marshall.JsonProtocolMarshallerBuilder;
+import software.amazon.awssdk.protocols.json.internal.marshall.SimpleTypeJsonMarshaller;
+import software.amazon.awssdk.protocols.jsoncore.JsonNode;
+import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
+import software.amazon.awssdk.services.dynamodb.model.KeySchemaElement;
+import software.amazon.awssdk.services.dynamodb.model.KeyType;
+import software.amazon.awssdk.services.dynamodb.model.TableDescription;
+import software.amazon.awssdk.thirdparty.jackson.core.JsonFactory;
+import software.amazon.awssdk.utils.StringUtils;
+import ua.org.java.dynamoit.components.tablegrid.parser.expression.FilterExpressionBuilder;
 
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -41,37 +60,46 @@ import java.util.stream.StreamSupport;
 
 public class Utils {
 
-    public static final ObjectMapper OBJECT_MAPPER = new ObjectMapper().setSerializationInclusion(JsonInclude.Include.NON_NULL);
-    public static final ObjectWriter PRETTY_PRINTER = OBJECT_MAPPER.writerWithDefaultPrettyPrinter();
+    public static final ObjectMapper OBJECT_MAPPER = new ObjectMapper()
+            .setSerializationInclusion(JsonInclude.Include.NON_NULL);
+
+    public static final ObjectWriter PRETTY_PRINTER = OBJECT_MAPPER
+            .writerWithDefaultPrettyPrinter();
+
+    private static final ObjectMapper PROPERTIES_MAPPER = new ObjectMapper()
+            .setVisibility(PropertyAccessor.FIELD, JsonAutoDetect.Visibility.ANY)
+            .setSerializationInclusion(JsonInclude.Include.NON_EMPTY);
 
     public static <T> Stream<T> asStream(Iterable<T> iterable) {
         return StreamSupport.stream(iterable.spliterator(), false);
     }
 
-    public static boolean isHashKey(String attributeName, DescribeTableResult describeTableResult) {
-        TableDescription tableDescription = describeTableResult.getTable();
-        return tableDescription.getKeySchema().stream().anyMatch(keySchemaElement -> keySchemaElement.getAttributeName().equals(attributeName) && keySchemaElement.getKeyType().equals("HASH"));
+    public static boolean isHashKey(String attributeName, TableDescription tableDescription) {
+        return tableDescription.keySchema().stream()
+                .anyMatch(keySchemaElement -> keySchemaElement.attributeName().equals(attributeName)
+                        && keySchemaElement.keyType().equals(KeyType.HASH));
     }
 
-    public static boolean isRangeKey(String attributeName, DescribeTableResult describeTableResult) {
-        TableDescription tableDescription = describeTableResult.getTable();
-        return tableDescription.getKeySchema().stream().anyMatch(keySchemaElement -> keySchemaElement.getAttributeName().equals(attributeName) && keySchemaElement.getKeyType().equals("RANGE"));
+    public static boolean isRangeKey(String attributeName, TableDescription tableDescription) {
+        return tableDescription.keySchema().stream()
+                .anyMatch(keySchemaElement -> keySchemaElement.attributeName().equals(attributeName)
+                        && keySchemaElement.keyType().equals(KeyType.RANGE));
     }
 
-    public static Optional<String> getHashKey(DescribeTableResult describeTableResult) {
-        TableDescription tableDescription = describeTableResult.getTable();
-        return lookUpKeyName(tableDescription.getKeySchema(), KeySchemaType.HASH);
+    public static Optional<String> getHashKey(TableDescription tableDescription) {
+        return lookUpKeyName(tableDescription.keySchema(), KeyType.HASH);
     }
 
-    public static Optional<String> getRangeKey(DescribeTableResult describeTableResult) {
-        TableDescription tableDescription = describeTableResult.getTable();
-        return lookUpKeyName(tableDescription.getKeySchema(), KeySchemaType.RANGE);
+    public static Optional<String> getRangeKey(TableDescription tableDescription) {
+        return lookUpKeyName(tableDescription.keySchema(), KeyType.RANGE);
     }
 
-    public static Optional<String> lookUpKeyName(List<KeySchemaElement> keySchemaElements, KeySchemaType keySchemaType) {
-        return keySchemaElements.stream().filter(keySchemaElement -> keySchemaElement.getKeyType().equals(keySchemaType.name())).map(KeySchemaElement::getAttributeName).findFirst();
+    public static Optional<String> lookUpKeyName(List<KeySchemaElement> keySchemaElements, KeyType keyType) {
+        return keySchemaElements.stream()
+                .filter(keySchemaElement -> keySchemaElement.keyType().equals(keyType))
+                .map(KeySchemaElement::attributeName)
+                .findFirst();
     }
-
 
     public static <T> Comparator<T> KEYS_FIRST(String hashKeyName, String rangeKeyName, Function<T, String> convert) {
         return (o1, o2) -> {
@@ -100,7 +128,7 @@ public class Utils {
 
     public static String logAsJson(Object value) {
         try {
-            return OBJECT_MAPPER.writeValueAsString(value);
+            return PROPERTIES_MAPPER.writeValueAsString(value);
         } catch (JsonProcessingException ignored) {
             System.out.println(ignored);
         }
@@ -122,7 +150,7 @@ public class Utils {
     }
 
     public static List<Integer> skipSequences(List<Integer> dataList) {
-        return groupBySeq(dataList).stream().map(list -> list.get(0)).collect(Collectors.toList());
+        return groupBySeq(dataList).stream().map(List::getFirst).collect(Collectors.toList());
     }
 
     public static List<List<Integer>> groupBySeq(List<Integer> dataList) {
@@ -131,8 +159,8 @@ public class Utils {
                     if (acc.isEmpty()) {
                         acc.add(new ArrayList<>());
                     }
-                    List<Integer> lastGroup = acc.get(acc.size() - 1);
-                    if (lastGroup.isEmpty() || val - lastGroup.get(lastGroup.size() - 1) == 1) {
+                    List<Integer> lastGroup = acc.getLast();
+                    if (lastGroup.isEmpty() || val - lastGroup.getLast() == 1) {
                         lastGroup.add(val);
                     } else {
                         ArrayList<Integer> newGroup = new ArrayList<>();
@@ -152,24 +180,125 @@ public class Utils {
         });
     }
 
-    public static Item rawJsonToItem(String json) throws JsonProcessingException {
-        return ItemUtils.toItem(rawJsonToMap(json));
+    public static EnhancedDocument rawJsonToItem(String json) throws JsonProcessingException {
+        return EnhancedDocument.fromAttributeValueMap(rawJsonToMap(json));
     }
 
-    public static String convertJsonDocument(String json, boolean toRaw) {
+    static AttributeValue singlePropertyParser(JsonNode jsonNode) {
+        AttributeValue.Builder builder = AttributeValue.builder();
+        for (SdkField<?> sdkField: builder.sdkFields()) {
+            var fieldOptional = jsonNode.field(sdkField.locationName());
+            fieldOptional.flatMap(fieldValue -> {
+                if (sdkField.marshallingType() == MarshallingType.STRING) {
+                    return Optional.of(fieldValue.asString());
+                }
+                if (sdkField.marshallingType() == MarshallingType.BOOLEAN) {
+                    return Optional.of(fieldValue.asBoolean());
+                }
+                if (sdkField.marshallingType() == MarshallingType.SDK_BYTES) {
+                    return Optional.of(SdkBytes.fromString(fieldValue.asString(), StandardCharsets.UTF_8));
+                }
+                if (sdkField.marshallingType() == MarshallingType.NULL) {
+                    return Optional.of(fieldValue.isNull());
+                }
+                if (sdkField.marshallingType() == MarshallingType.MAP && fieldValue.isObject()) {
+                    return Optional.of(mapPropertyParser(fieldValue));
+                }
+                if (sdkField.marshallingType() == MarshallingType.LIST && fieldValue.isArray()) {
+                    Function<JsonNode, Object> valueConvertor = switch (sdkField.locationName()) {
+                        case "SS" -> JsonNode::asString;
+                        case "NS" -> JsonNode::asNumber;
+                        case "BS" -> json -> SdkBytes.fromUtf8String(json.asString());
+                        default -> Utils::singlePropertyParser;
+                    };
+                    return Optional.of(fieldValue.asArray().stream().map(valueConvertor).toList());
+                }
+                if (sdkField.marshallingType() == MarshallingType.LIST && fieldValue.isArray()) {
+                    return Optional.of(fieldValue.asArray().stream().map(Utils::singlePropertyParser).toList());
+                }
+                return Optional.empty();
+            }).ifPresent(value -> sdkField.set(builder, value));
+        }
+
+        return builder.build();
+    }
+
+    static Map<String, AttributeValue> mapPropertyParser(JsonNode jsonNode) {
+        return jsonNode.asObject()
+                .entrySet()
+                .stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> singlePropertyParser(entry.getValue())
+                ));
+    }
+
+    static Map<String, AttributeValue> jsonRawParsing(String rawJson) {
+        JsonNode jsonRoot = JsonNode.parser().parse(rawJson);
+
+        return mapPropertyParser(jsonRoot);
+    }
+
+    /**
+     * Convert raw dynamodb document to plain presentation
+     * from {"name": {"S": "Mr. Smith"}} to {"name": "Mr. Smith"}
+     *
+     * @param json raw json
+     * @return plain json
+     */
+    public static String jsonRawToPlain(String json) {
+        EnhancedDocument document = EnhancedDocument.fromAttributeValueMap(jsonRawParsing(json));
+        var plainJson = document.toJson();
+
         try {
-            if (toRaw) {
-                Item item = Item.fromJSON(json);
-                Map<String, AttributeValue> map = ItemUtils.toAttributeValues(item);
-                return PRETTY_PRINTER.writeValueAsString(map);
-            } else {
-                Item item = rawJsonToItem(json);
-                return item.toJSONPretty();
-            }
-        } catch (Exception e) {
+            Map<String, Object> toMap = OBJECT_MAPPER.readValue(plainJson, new TypeReference<>() {
+            });
+            return PRETTY_PRINTER.writeValueAsString(toMap);
+        } catch (JsonProcessingException e) {
             e.printStackTrace();
         }
-        return json;
+        return plainJson;
+    }
+
+    public static String jsonPlainToRaw(String json) {
+        EnhancedDocument item = EnhancedDocument.fromJson(json);
+        Map<String, AttributeValue> map = item.toMap();
+
+        return attributeValueMapToJson(map);
+    }
+
+    public static String attributeValueMapToJson(Map<String, AttributeValue> map) {
+        try {
+            SdkJsonGenerator jsonGenerator = new SdkJsonGenerator(new JsonFactory(), "application/json");
+            var context = JsonMarshallerContext
+                    .builder()
+                    .jsonGenerator(jsonGenerator)
+                    .protocolHandler((JsonProtocolMarshaller) JsonProtocolMarshallerBuilder
+                            .create()
+                            .protocolMetadata(AwsJsonProtocolMetadata.builder().build())
+                            .endpoint(new URI("https://fake.com"))
+                            .jsonGenerator(jsonGenerator)
+                            .sendExplicitNullForPayload(true)
+                            .operationInfo(OperationInfo.builder().build())
+                            .build())
+                    .build();
+
+            jsonGenerator.writeStartObject();
+
+            map.forEach((s, attributeValue) -> {
+                SimpleTypeJsonMarshaller.SDK_POJO.marshall(attributeValue, context, s, null);
+            });
+
+            jsonGenerator.writeEndObject();
+
+            String rawJson = new String(jsonGenerator.getBytes());
+            Map<String, Object> toMap = OBJECT_MAPPER.readValue(rawJson, new TypeReference<>() {
+            });
+
+            return PRETTY_PRINTER.writeValueAsString(toMap);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public static void copyToClipboard(String value) {
@@ -177,6 +306,70 @@ public class Utils {
         content.putString(value);
         Clipboard clipboard = Clipboard.getSystemClipboard();
         clipboard.setContent(content);
+    }
+
+    public static String uglyToPrettyJson(String json) {
+        try {
+            Object j = OBJECT_MAPPER.readValue(json, Object.class);
+            return PRETTY_PRINTER.writeValueAsString(j);
+        } catch (JsonProcessingException e) {
+            return json;
+        }
+    }
+
+    /**
+     * Builds a {@link QueryEnhancedRequest} with specified attributes for querying
+     * a DynamoDB table.
+     *
+     * @param hashName           The name of the partition key attribute.
+     * @param rangeName          The name of the sort key attribute. Can be null if
+     *                           the table doesn't use a sort key.
+     * @param attributeFilterMap A map containing attribute names and their
+     *                           corresponding filter values.
+     * @param numberOfDocuments  The maximum number of documents to be returned by
+     *                           the query.
+     * @return A {@link QueryEnhancedRequest} object configured with the specified
+     * attributes and filter conditions.
+     * @throws IllegalArgumentException if the partition key value is not present in
+     *                                  the attribute filter map.
+     */
+    public static QueryEnhancedRequest buildQuerySpec(String hashName, String rangeName,
+                                                      Map<String, String> attributeFilterMap, int numberOfDocuments) {
+        String hashValue = attributeFilterMap.get(hashName);
+        Key.Builder keyBuilder = Key.builder().partitionValue(hashValue);
+
+        if (rangeName != null && StringUtils.isNotBlank(attributeFilterMap.get(rangeName))) {
+            String sortValue = attributeFilterMap.get(rangeName);
+            keyBuilder.sortValue(sortValue);
+        }
+
+        var attributesWithoutKeys = attributeFilterMap.entrySet().stream()
+                .filter(entry -> !entry.getKey().equals(hashName) && !entry.getKey().equals(rangeName))
+                .filter(entry -> StringUtils.isNotBlank(entry.getValue()))
+                .toList();
+
+        FilterExpressionBuilder filterExpressionBuilder = new FilterExpressionBuilder();
+
+        attributesWithoutKeys
+                .forEach(entry -> filterExpressionBuilder.addAttributeValue(entry.getKey(), entry.getValue()));
+
+        QueryEnhancedRequest.Builder querySpec = QueryEnhancedRequest.builder()
+                .queryConditional(QueryConditional.keyEqualTo(keyBuilder.build()))
+                .filterExpression(filterExpressionBuilder.build());
+
+        return querySpec.limit(numberOfDocuments).build();
+    }
+
+    private static synchronized String hashValue(String value) {
+        return String.valueOf(Math.abs(value.hashCode()));
+    }
+
+    public static String attributeName(String attribute) {
+        return "#attr_" + hashValue(attribute);
+    }
+
+    public static String attributeValue(String attribute) {
+        return ":val_" + hashValue(attribute);
     }
 
 }
